* Fixed TorBrowser not showing sometimes :)

--- a/theme.css
+++ b/theme.css
@@ -59,6 +59,6 @@ footer
   display: none;
 }
 
-#torStandalone {
+#torStandalone, #torBrowser {
   display: none;
 }
